WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62539
[EFL] Input method hints not updated while clicking non-input field editable area
https://bugs.webkit.org/show_bug.cgi?id=62539
Summary
[EFL] Input method hints not updated while clicking non-input field editable ...
Michal Pakula vel Rutka
Reported
2011-06-13 05:29:23 PDT
Overview: On some pages input method hints are not updated while focus is changed from editable area with input tags to other which are does not have input tag i.e. textarea When input method hints are set by ewk_view_input_method_state_set current input method priv->imh is being reset after an if condition. One of its conditions is that a focused node has to have tag name input. There may be editable areas i.e. textarea are which does not have input tag, and hints remain unchanged. Steps to reproduce: Go to
http://24ways.org/examples/have-a-field-day-with-html5-forms/24ways-form.html
, click on the one of input fields - input method hints should change respectively of an input type. Then click on Address area. Actual result: Input method hint remains unchanged Expected result: Input method hint should be reset to 0.
Attachments
patch
(1.73 KB, patch)
2011-06-13 08:13 PDT
,
Michal Pakula vel Rutka
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michal Pakula vel Rutka
Comment 1
2011-06-13 08:13:20 PDT
Created
attachment 96956
[details]
patch
Collabora GTK+ EWS bot
Comment 2
2011-06-13 08:29:14 PDT
Comment on
attachment 96956
[details]
patch
Attachment 96956
[details]
did not pass gtk-ews (gtk): Output:
http://queues.webkit.org/results/8831805
Leandro Pereira
Comment 3
2011-06-13 12:22:58 PDT
Comment on
attachment 96956
[details]
patch LGTM. (Also, cq? again, as this isn't touching any GTK-related file.)
Eric Seidel (no email)
Comment 4
2011-06-13 14:37:16 PDT
Comment on
attachment 96956
[details]
patch I don't know how to review this. I don't think there are any EFL reviewers. I'm happy to rs=me. The gtk error looks bogus.
WebKit Review Bot
Comment 5
2011-06-13 15:47:48 PDT
Comment on
attachment 96956
[details]
patch Clearing flags on attachment: 96956 Committed
r88725
: <
http://trac.webkit.org/changeset/88725
>
WebKit Review Bot
Comment 6
2011-06-13 15:47:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug